tests/ui/inference/need_type_info/incompat-call-after-qualified-path-1.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/incompat-call-after-qualified-path-1.rs:25:14
   |
LL |   f(|a, b| a.cmp(b));
   |              ^^^ multiple `cmp` found
   |
note: candidate #1 is defined in the trait `Iterator`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
note: candidate #2 is defined in the trait `Ord`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
help: disambiguate the method for candidate #1
   |
LL |   f(|a, b| Iterator::cmp(a, b));
   |            ~~~~~~~~~~~~~~~~~~~
help: disambiguate the method for candidate #2
   |
LL |   f(|a, b| Ord::cmp(&a, b));
   |            ~~~~~~~~~~~~~~~

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/incompat-call-after-qualified-path-1.rs:25:3
   |
LL |   f(|a, b| a.cmp(b));
   |   ^ --------------- unexpected argument
   |
note: function defined here
  --> $DIR/incompat-call-after-qualified-path-1.rs:19:4
   |
LL | fn f() {}
   |    ^
help: remove the extra argument
   |
LL -   f(|a, b| a.cmp(b));
LL +   f();
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0034, E0061.
For more information about an error, try `rustc --explain E0034`.
